--- a/vagrant/catalog/static/styles.css
+++ b/vagrant/catalog/static/styles.css
@@ -62,7 +62,7 @@
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-a {
+header a {
   color: inherit; /* blue colors for links too */
   text-decoration: inherit; /* no underline */
 }
