--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -36,7 +36,9 @@
           if (authResult['code']) {
             // Hide the sign-in button now that the user is authorized
             $('#signinButton').attr('style', 'display: none');
-            // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+            // Send the one-time-use code to the server, if the server responds,
+            // write a 'login successful' message to the web page and then
+            // redirect back to the home page
             $.ajax({
               type: 'POST',
               url: '/gconnect?state={{state}}',
@@ -50,7 +52,7 @@
 
                   setTimeout(function() {
                     window.location.href = "/home";
-                  }, 4000);
+                  }, 2000);
                 } else if (authResult['error']) {
                   console.log('There was an error: ' + authResult['error']);
                 } else {
