--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -15,7 +15,7 @@
       </div>
     </header>
 
-    <main class="margin main-div row80 delete-main">
+    <main class="margin main-div row80 single-main">
       <h2 class="col-12">Login</h2>
       <div id="signInButton">
         <span class="g-signin"
