--- a/vagrant/catalog/templates/edititem.html
+++ b/vagrant/catalog/templates/edititem.html
@@ -16,11 +16,13 @@
     </header>
 
     <main class="margin main-div row80 single-main">
-      <h2 class="col-12">{{item.name}}</h2>
-      <p class="col-12">{{item.description}}</p>
-      {% if credentials != None %}
-        <p><a href="{{url_for('edit', item_id=item.id)}}">Edit</a> | <a href="{{url_for('delete', item_id=item.id)}}">Delete</a></p>
-      {% endif %}
+      <h2 class="col-12">Edit {{item.name}}</h2>
+      <form action="{{url_for('edit_item', item_id=item.id)}}" method="post" class="col-12">
+        <p class="col-12">Name: <input name="name" type="text" placeholder="{{item.name}}"></p>
+        <p class="col-12">Description: <br><textarea name="description" rows="4" cols="50"></textarea></p>
+
+        <input type="submit" value="Save">
+      </form>
     <main>
   </body>
 </html>
