--- a/vagrant/catalog/static/styles.css
+++ b/vagrant/catalog/static/styles.css
@@ -183,6 +183,16 @@ h2 {
   color: #a8a8a8
 }
 
+/* Flash message div styles */
+.flashes {
+  text-align: center;
+}
+
+.flashes li {
+  list-style-type: none;
+  padding: 10px 0 0 0;
+}
+
 @media screen and (min-width: 734px) {
   .greeting {
     margin-right: 8px;
