--- a/vagrant/catalog/templates/additem.html
+++ b/vagrant/catalog/templates/additem.html
@@ -19,13 +19,17 @@
       <h2 class="col-12">Add an Item</h2>
 
       <form action="{{ url_for('newItem')}}" method = 'post'>
-      	<label>Name: </label><input type ='text' size='30' name='name'>
-        <br>
-        <label>Description: </label><input type ='text' size='30' name='name'>
-
-
-      <input type='submit' value='Create'>
-
+        <p class="col-12">Name: <input name="name" type="text" required></p>
+        <p class="col-12">Description: <br><textarea name="description" rows="4" cols="50" required></textarea></p>
+        <p>
+          Catagory:
+          <select name="catagory_id">
+            {% for c in catagories %}
+              <option value="{{c.id}}">{{c.name}}</option>
+            {% endfor %}
+          </select>
+        </p>
+        <input type='submit' value='Create'>
       </form>
     <main>
   </body>
