--- a/vagrant/catalog/templates/homepage.html
+++ b/vagrant/catalog/templates/homepage.html
@@ -33,8 +33,8 @@
       <div class="col-5">
         <h2 class="left10">Catagories</h2>
         <ul class="list-no-marks left10">
-          {% for catagory in catagories %}
-            <li class="click-list"><a href="{{url_for('home_page_single', catagory_id = catagory.id)}}">{{catagory.name}}</a></li>
+          {% for category in catagories %}
+            <li class="click-list"><a href="{{url_for('home_page_single', category_id = category.id)}}">{{category.name}}</a></li>
           {% endfor %}
         </ul>
       </div>
@@ -46,7 +46,7 @@
         {% endif %}
         <ul class="list-no-marks left10">
           {% for i in items %}
-            <li class="click-list"><a href="{{url_for('read_item', item_id=i.id)}}">{{i.name}}</a> <i class="catagory-ref">({{i.catagory_name}})</i></li>
+            <li class="click-list"><a href="{{url_for('read_item', item_id=i.id)}}">{{i.name}}</a> <i class="category-ref">({{i.category_name}})</i></li>
           {% endfor %}
         </ul>
       </div>
