fix: Updated program to the specifications of the marker

--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -15,6 +15,17 @@
       </div>
     </header>
 
+    <div class="flashes">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+              <li><strong>{{message}}</strong></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+    </div>
+
     <main class="margin main-div row80 single-main">
       <h2 class="col-12">Login</h2>
       <div id="signInButton">
