fix: Spelling error catagories to categories

--- a/vagrant/catalog/templates/additem.html
+++ b/vagrant/catalog/templates/additem.html
@@ -24,7 +24,7 @@
         <p>
           Category:
           <select name="category_id">
-            {% for c in catagories %}
+            {% for c in categories %}
               <option value="{{c.id}}">{{c.name}}</option>
             {% endfor %}
           </select>
