--- a/vagrant/catalog/templates/deleteitem.html
+++ b/vagrant/catalog/templates/deleteitem.html
@@ -2,7 +2,7 @@
   <head>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  </haed>
+  </head>
 
   <body class="container body-background">
     <header class="padding row80">
